fix native image builds